# SKILLD

./: .env.example  .gitattributes  .gitignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
api/: mcp.ts
programs/skilld_attest/: Cargo.toml
programs/skilld_attest/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/skilld_attest/src/instructions/: attest_private.rs  attest_public.rs  init_counter.rs  mod.rs  revoke_attestation.rs
programs/skilld_attest_client/: Cargo.toml
programs/skilld_attest_client/src/: lib.rs
programs/skilld_attest_client/tests/: integration.rs
programs/skilld_score/: Cargo.toml
programs/skilld_score/src/: lib.rs
public/.well-known/: skilld-mcp.json
scripts/: sas-bootstrap.ts  test-all.ts  test-e2e.ts  test-flow.ts  test-magicblock.ts  test-memo-counter.ts  test-program.ts  test-score-chain.ts  test-umbra.ts  test-x402.ts
src/: App.tsx  index.css  main.tsx
src/components/: AttestProgramPanel.tsx  Avatar.tsx  BrandLogos.tsx  Header.tsx  IntroModal.tsx  IssuerPanel.tsx  MagicBlockPanel.tsx  PublishScorePanel.tsx  SasPanel.tsx  ScoreBreakdown.tsx  ScoreRing.tsx  VouchModal.tsx  WorldIdPanel.tsx  X402Inbox.tsx
src/lib/: polyfills.ts
src/lib/attestations/: hooks.ts  store.ts
src/lib/colosseum/: winners.ts
src/lib/github/: api.ts  hooks.ts
src/lib/magicblock/: api.ts  hooks.ts  program.ts  store.ts
src/lib/sas/: api.ts  hooks.ts  (+2 more)
src/pages/: About.tsx  Activity.tsx  Agents.tsx  Attestations.tsx  Home.tsx  Profile.tsx  Search.tsx
src/types/: profile.ts
(+14 files in other folders)
