[package]
name = "skilld_attest"
version = "0.1.0"
description = "Skilld onchain attestation registry with MagicBlock Private Ephemeral Rollup delegation for sealed peer vouches"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skilld_attest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
